--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,3 @@
 # Auto detect text files and perform LF normalization
 * text=auto
-review.ipynb linguist-vendored=false
+review/review.ipynb linguist-vendored=false
