--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,3 @@
 # Auto detect text files and perform LF normalization
 * text=auto
-review/review.ipynb -linguist-detectable
+review -linguist-detectable
