--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,5 @@
 # Auto detect text files and perform LF normalization
 * text=auto
-review -linguist-detectable
+review/review.ipynb -linguist-detectable
+review/.ipynb_checkpoints/review-checkpoint.ipynb -linguist-detectable
+review/.ipynb_checkpoints/Untitled-checkpoint.ipynb -linguist-detectable
