--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,4 @@
 # Auto detect text files and perform LF normalization
 * text=auto
-review/review.ipynb -linguist-detectable
-review/.ipynb_checkpoints/review-checkpoint.ipynb -linguist-detectable
-review/.ipynb_checkpoints/Untitled-checkpoint.ipynb -linguist-detectable
+review/* linguist-vendored
+review.ipynb linguist-vendored=false
