--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,4 @@
 # Auto detect text files and perform LF normalization
 * text=auto
-./review/review.ipynb linguist-vendored
-./review/.ipynb_checkpoints/review-checkpoint.ipynb linguist-vendored
-./review/.ipynb_checkpoints/Untitled-checkpoint.ipynb linguist-vendored
+review/* linguist-vendored
+
