--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,4 @@
 # Auto detect text files and perform LF normalization
 * text=auto
 review/* linguist-vendored
-
+review/.ipynb_checkpoints/* linguist-vendored
